# alien-inviders

./: Alien Invaders 1.dba  Alien Invaders 1.dbpro  Alien Invaders.bak  Alien Invaders.dba  Alien Invaders.dbpro  AlienInvaderSourceCode.bb  Cargo.toml  Config.ini  Included1.bak  Included1.dba  Included2.bak  Included2.dba  Included3.bak  Included3.dba  Main.bb  Main_AI.bb  Main_Quest.bb  Main_Trade.bb  Quest.map  README.md  README.textile  Reserved.bb  ReservedIncluded1.dba  Save1.AIS  Save2.AIS  Save3.AIS  Save4.AIS  Save5.AIS  World.map  asd.ais
Data/: Bots.map  Items.map  Quest.map
Meshes/: Alien Saucer.x  Pod.x  Red Stealth.x  fighter2.dds  tx06.dds  wraith.dds
Objects/: Alien Saucer.x  Blue Cruiser.x  Blue Fighter.x  Blue Raider.x  Bonus.x  Gas.x  Gray Recon.x  Gray Stealth.x  Green Recon.x  Light Cruiser.x  Light Fighter.x  Pink Raider.x  Red Cruiser.x  Red Fighter.x  Red Raider.x  Scorpion Ship.x  Tri Ship.x  commands2.dds  fighter1.dds  objects2.dds  pu2.dds  tx01.dds  tx01b.dds  tx01c.dds  tx02.dds  tx02b.dds  tx02c.dds  tx05.dds  tx06a.dds  tx08.dds  tx08a.dds  tx08c.dds  tx09.dds  tx09a.dds  tx09c.dds  tx15.dds  tx15a.dds  tx15c.dds  tx16.dds  tx16a.dds  (+2 more)
Thumbs/: EARTH.TGA
src/: game.rs  main.rs
src/game/: mod.rs
src/game/scene_gameplay/: mod.rs  shader.wgsl
src/game/scene_main_menu/: mod.rs
